2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-07-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ada.am: Add .adp to SUFFIXES.
	Remove c-compilation rule. 
	* samples/base_sp/Makefile.am: Add init.$(OBJEXT).
	* samples/hello/Makefile.am: Add init.$(OBJEXT).
	* samples/ticker/Makefile.am: Add init.$(OBJEXT).
	* samples/ticker/Makefile.am: Remove VPATH.
	* sptests/sp01/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp01/Makefile.am: Don't include */lib.am.
	* sptests/sp01/Makefile.am: Remove VPATH.
	* sptests/sp02/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp02/Makefile.am: Don't include */lib.am.
	* sptests/sp03/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp03/Makefile.am: Don't include */lib.am.
	* sptests/sp04/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp04/Makefile.am: Don't include */lib.am.
	* sptests/sp04/Makefile.am: Remove EXPADA.
	* sptests/sp04/Makefile.am: Remove VPATH.
	* sptests/sp05/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp05/Makefile.am: Don't include */lib.am.
	* sptests/sp06/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp06/Makefile.am: Don't include */lib.am.
	* sptests/sp07/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp07/Makefile.am: Don't include */lib.am.
	* sptests/sp07/Makefile.am: Remove EXPADA.
	* sptests/sp08/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp08/Makefile.am: Don't include */lib.am.
	* sptests/sp09/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp09/Makefile.am: Don't include */lib.am.
	* sptests/sp11/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp11/Makefile.am: Don't include */lib.am.
	* sptests/sp12/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp12/Makefile.am: Don't include */lib.am.
	* sptests/sp13/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp13/Makefile.am: Don't include */lib.am.
	* sptests/sp14/Makefile.am: Add init.$(OBJEXT).
	* sptests/sp14/Makefile.am: Don't include */lib.am.
	* sptests/sp15/Makefile.am: Add init.$(OBJEXT).