@@ -1,10 +1,9 @@
 ## $Id$
 
-ACLOCAL_AMFLAGS = -I ../../../aclocal
+ACLOCAL_AMFLAGS = -I aclocal -I ../tests/aclocal
 
 include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../automake/compile.am
-include $(top_srcdir)/../../../automake/lib.am
 
 SUBDIRS = support samples sptests tmtests
 
