@@ -1,3 +1,9 @@
+2003-08-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* aclocal/prog-gnat.m4: New (copied from ../../../aclocal).
+	* Makefile.am: ACLOCAL_AMFLAGS = -I aclocal -I ../tests/aclocal.
+	Don't include */automake/lib.am (Unused).
+
 2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.
